# Finance-MCP-Agent-UI

./: .gitignore  README.md  pyproject.toml
apps/: __init__.py
apps/agent/: cli.py  main.py
apps/mcp_server/: anomalies.py  categorization.py  main.py  parsing.py  reporting.py  storage.py  suggestions.py  tools.py
apps/ui/: __init__.py  server.py
apps/ui/static/: index.html
data/: rules_taxonomy.json  sample_transactions.csv
tests/: test_parsing.py  test_reporting.py  test_storage.py  test_suggestions_agent.py  test_tools.py  test_ui_pipeline.py
