[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-mcp-agent"
version = "0.1.0"
description = "Finance MCP server and agent for personal finance analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
]
llm = [
  "openai>=1.0,<2",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*"]
exclude = ["tests*", "data*", "output*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
